--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,12 @@ dependencies:
   firebase_core: ^3.12.1
   firebase_auth: ^5.5.1
   firebase_analytics: ^11.5.0
+  google_maps_flutter: ^2.12.3
+  geolocator: ^14.0.1
+  permission_handler: ^12.0.0+1
+  url_launcher: ^6.3.1
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/images/
