--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,8 +16,14 @@ dependencies:
   geolocator: ^14.0.1
   permission_handler: ^12.0.0+1
   url_launcher: ^6.3.1
+  flutter_launcher_icons: ^0.14.4
 
 flutter:
   uses-material-design: true
   assets:
     - assets/images/
+
+flutter_icons:
+  android: true
+  ios: false
+  image_path: "assets/images/logo.png"
