--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
 
-  firebase_core: ^3.12.1
+  firebase_core: ^3.14.0
   firebase_auth: ^5.5.1
   firebase_analytics: ^11.5.0
   google_maps_flutter: ^2.12.3
@@ -17,6 +17,9 @@ dependencies:
   permission_handler: ^12.0.0+1
   url_launcher: ^6.3.1
   flutter_launcher_icons: ^0.14.4
+  google_sign_in: ^6.2.1
+  font_awesome_flutter: ^10.7.0
+  cloud_firestore: ^5.6.9
 
 flutter:
   uses-material-design: true
