--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
   google_sign_in: ^6.2.1
   font_awesome_flutter: ^10.7.0
   cloud_firestore: ^5.6.9
+  http: ^1.2.1
+  flutter_polyline_points: ^2.0.0
+  webview_flutter: ^4.2.2
 
 flutter:
   uses-material-design: true
