--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   http: ^1.2.1
   flutter_polyline_points: ^2.0.0
   webview_flutter: ^4.2.2
+  carousel_slider: ^5.1.1
 
 flutter:
   uses-material-design: true
