--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   flutter_polyline_points: ^2.0.0
   webview_flutter: ^4.2.2
   carousel_slider: ^5.1.1
+  fl_chart: ^0.66.0
+
 
 flutter:
   uses-material-design: true
